--- a/icons-bea652a7d0546b99c7cba9d3b4a538ee/manifest.json
+++ b/icons-bea652a7d0546b99c7cba9d3b4a538ee/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "__docs__",
-  "short_name": "__docs__",
+  "name": "instructure-ui",
+  "short_name": "instructure-ui",
   "description": null,
   "dir": "auto",
   "lang": "en-US",
