--- a/icons-bea652a7d0546b99c7cba9d3b4a538ee/manifest.json
+++ b/icons-bea652a7d0546b99c7cba9d3b4a538ee/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "__docs__",
-  "short_name": "__docs__",
+  "name": "instructure-ui : UI libraries made by Instructure Inc. (4.3.0)",
+  "short_name": "instructure-ui : UI libraries made by Instructure Inc. (4.3.0)",
   "description": null,
   "dir": "auto",
   "lang": "en-US",
